# serde_postgres

./: Cargo.toml
