[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "serde_postgres"
homepage = "https://github.com/1aim/serde_postgres"
repository = "https://github.com/1aim/serde_postgres.git"
version = "0.3.0"
edition = "2018"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0"
#tokio-postgres = { version = "0.7", default_features = false }
tokio-postgres = { git = "https://github.com/amilkov3/rust-postgres.git", package = "tokio-postgres" }

[dev-dependencies]
serde = { version = "1.0.104", features = [ "derive" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tokio-postgres = { git = "https://github.com/amilkov3/rust-postgres.git", package = "tokio-postgres" }
postgres = { git = "https://github.com/amilkov3/rust-postgres.git", package = "postgres" }
